implement routing and bookmark features

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CampusVent</title>
     <script src="https://kit.fontawesome.com/5d2a52b12a.js" crossorigin="anonymous"></script>
   </head>
   <body>
